--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <button type="submit">Search</button>
     </form>
     <div class="gallery"></div>
+    <img src="./img/vite-logo.png" alt="">
     <div class="load-more"><button>Load more</button></div>
 
     <script type="module" src="./main.js"></script>
